--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -7,6 +7,8 @@ html, body, main {
   min-height: 100%;
   margin: 0;
   background-color: white;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 * {
