--- a/src/mobileNavigationBar.styles.scss
+++ b/src/mobileNavigationBar.styles.scss
@@ -1,48 +1,219 @@
+// @import './constants';
+//
+// .mobileMenu {
+//   position: fixed;
+//   top: 0;
+//   background-color: white;
+//   width: 100%;
+//   height: 100%;
+//   z-index: 100000;
+//
+//   .exit {
+//     position: absolute;
+//     top: 0;
+//     right: 0;
+//     fill: $bgc-medium-grey;
+//     width: 50px;
+//     height: 50px;
+//     margin: 20px;
+//   }
+//
+//   .menuContainer {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     align-self: center;
+//     height: 100%;
+//
+//     .horizontalRule {
+//       height: 1px;
+//       width: 80%;
+//       background-color: $bgc-medium-light-grey;
+//       margin: 10px;
+//     }
+//
+//     .item {
+//       @include menu-font;
+//       font-size: 2em;
+//       margin: 10px;
+//     }
+//
+//     .link {
+//       text-decoration: none;
+//       margin: 0;
+//     }
+//   }
+// }
+
 @import './constants';
 
+.mobileNavContainer {
+  position: relative;
+  z-index: 1000;
+}
 
-.mobileMenu {
-  position: fixed;
+.mobileNavBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 75px;
   top: 0;
   background-color: white;
-  width: 100%;
-  height: 100%;
-  z-index: 100000;
+  padding: 0 10px;
 
-  .exit {
-    position: absolute;
-    top: 0;
-    right: 0;
-    fill: $bgc-medium-grey;
-    width: 50px;
-    height: 50px;
-    margin: 20px;
+  .iconContainer {
+    display: flex;
+    justify-content: flex-end;
+    width: 30%;
+
+    .cart {
+      width: 20px;
+      height: 20px;
+      fill: $bgc-medium-grey;
+      margin: 10px 15px;
+    }
+
+    .hamburger {
+      width: 20px;
+      height: 20px;
+      fill: $bgc-medium-grey;
+      margin: 10px 0;
+    }
   }
 
-  .menuContainer {
+  .link {
+    text-decoration: none;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    height: 100%;
+    align-items: flex-start;
+    margin: 0;
 
-    .horizontalRule {
-      height: 1px;
-      width: 80%;
-      background-color: $bgc-medium-light-grey;
-      margin: 10px;
+    .bgc {
+      @include header-font;
+      text-align: left;
+      margin: 0;
+      font-size: 1.5em;
+
+      // @include tabletLandscape {
+      //   font-size: 2em;
+      // }
+      //
+      // @include tablet {
+      //   font-size: 1.5em;
+      // }
+      //
+      // @include phone {
+      //   font-size: 1.75em
+      // }
+      //
+      // @include smallPhone {
+      //   font-size: 1.5em;
+      // }
+  }
+}
+
+.header {
+  margin: 0;
+}
+
+.menuLink {
+  text-decoration: none;
+}
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 40%;
+}
+
+.tabletMenu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 48%;
+}
+
+.menuItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 37px 0;
+
+  .item {
+    @include menu-font;
+    margin: 5px;
+  }
+
+  .underline {
+    width: 85px;
+    height: 2px;
+    opacity: 0;
+  }
+
+  &:hover {
+    cursor: pointer;
+
+    .underline {
+      opacity: 1;
+      background-color: $bgc-orange;
+      transition: all 0.5s ease;
     }
 
     .item {
-      @include menu-font;
-      font-size: 2em;
-      margin: 10px;
+      color: $bgc-orange;
+      transition: all 0.5s ease;
     }
 
-    .link {
-      text-decoration: none;
-      margin: 0;
+    .products {
+      opacity: 1;
+      pointer-events: all;
+      transition: all 0.25s ease;
+    }
+
+    .moreDropDown {
+      opacity: 1;
+      pointer-events: all;
+      transition: all 0.25s ease;
     }
   }
+}
+
+.alertBar {
+  top: 99px;
+  display: flex;
+  align-content: center;
+  justify-content: flex-end;
+  width: 100%;
+  height: 36px;
+  background-color: $bgc-orange;
+  z-index: 0;
+}
+
+.alertMessage {
+  @include default-font;
+  color: white;
+  font-weight: 400;
+  font-size: 0.9em;
+  margin: 8px;
+  padding-right: 25px;
+  letter-spacing: 0.5px;
+
+  @include phone {
+    padding-right: 10px;
+  }
+
+  @include smallPhone {
+    padding-right: 10px;
+  }
+}
+
+.shippingIcon {
+  fill: white;
+  width: 20px;
+  height: 20px;
+  margin: 8px;
 }
